# web100_userland-debian

./: README.md  libweb100-0-dev_1.8-1_amd64.deb  libweb100-0_1.8-1_amd64.deb  web100-userland-utils_1.8-1_amd64.deb  web100-userland_1.8-1.dsc  web100-userland_1.8-1_amd64.build  web100-userland_1.8-1_amd64.changes
web100_userland-1.8/: .gitignore  AUTHORS  INSTALL  Makefile  Makefile.am  Makefile.in  NEWS  README  aclocal.m4  config.h  config.h.in  config.status  configure  configure.ac  libtool  web100-config  web100-config.in  web100.m4
web100_userland-1.8/debian/: .gitignore  changelog  control  copyright  files  libweb100-0-dev.install  libweb100-0.install  rules  web100-userland-utils.install
web100_userland-1.8/doc/: .gitignore  Makefile  Makefile.am  Makefile.in  developer-guide.txt  user-guide.txt
web100_userland-1.8/doc/man/: Makefile  Makefile.am  Makefile.in
web100_userland-1.8/doc/man/man1/: Makefile  Makefile.am  Makefile.in  deltavar.1  gutil.1  readall.1  readvar.1  web100-config.1  writevar.1
web100_userland-1.8/doc/man/man3/: Makefile  Makefile.am  Makefile.in  libweb100.3  web100_agent_accessors.3  web100_agent_find_var_and_group.3  web100_attach.3  web100_connection_accessors.3  web100_connection_copy.3  web100_connection_data_copy.3  web100_connection_find.3  web100_connection_find_v6.3  web100_connection_free_local_copy.3  web100_connection_from_socket.3  web100_connection_head.3  web100_connection_lookup.3  web100_connection_new_local_copy.3  web100_connection_next.3  web100_delta_any.3  web100_detach.3  web100_get_agent_type.3  web100_get_agent_version.3  web100_get_connection_agent.3  web100_get_connection_cid.3  web100_get_connection_spec.3  web100_get_group_name.3  web100_get_group_nvars.3  web100_get_group_size.3  web100_get_log_agent.3  web100_get_log_connection.3  web100_get_log_group.3  web100_get_log_time.3  web100_get_snap_group.3  web100_get_snap_group_name.3  web100_get_var_name.3  web100_get_var_size.3  web100_get_var_type.3  web100_group_accessors.3  web100_group_find.3  web100_group_head.3  (+26 more)
web100_userland-1.8/doc/man/man7/: Makefile  Makefile.am  Makefile.in  web100.7
web100_userland-1.8/lib/: .gitignore  Makefile  Makefile.am  Makefile.in  libweb100.la  web100.c  web100.lo
web100_userland-1.8/lib/.libs/: libweb100.la  libweb100.lai  libweb100.so.0  libweb100.so.0.3.3
web100_userland-1.8/m4/: ac_pkg_swig.m4  socklen_t.m4
web100_userland-1.8/python/: Makefile  Makefile.am  Makefile.in  Web100.py  libweb100.i  libweb100.py  libweb100_wrap.c  readall.py  setup.py
web100_userland-1.8/util/: Makefile  Makefile.am  Makefile.in
web100_userland-1.8/util/gui/: .gitignore  Makefile  Makefile.am  Makefile.in  connectioninfo-int.h  connectioninfo.c  connectioninfo.h  connectionlist.c  connectionlist.h  connectionselect.c  connectionselect.h  display.c  display.h  gutil  gutil.c  lcl.rc  rcvtuner.c  rcvtuner.h  rmt.rc  sndtuner.c  sndtuner.h  toolbox.c  toolbox.h  triage.c  triage.h  utillaunch.c  utillaunch.h  variablelist.c  variablelist.h  wcgraph.c  wcgraph.h  wcpie.c  wcpie.h  web100.1.rc  web100.2.rc  web100object.c  web100object.h  web100poll.c  web100poll.h  web100widget.c  (+1 more)
web100_userland-1.8/util/gui/.libs/: gutil
web100_userland-1.8/util/scripts/: .gitignore  Makefile  Makefile.am  Makefile.in  deltavar  deltavar.c  readall  readall.c  readvar  readvar.c  writevar  writevar.c
web100_userland-1.8/util/scripts/.libs/: deltavar  readall  readvar  writevar
